yarn -> pnpm, change to new qbittorrent library, support for stoppedUP states, verbose logging

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -6,3 +6,4 @@ services:
       - USERNAME=admin
       - PASSWORD=adminadmin
       - CLIENT=http://127.0.0.1:8080
+      - LOGGING=standard # can be standard or verbose
