--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qbittorrent-completed-remover",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "index.ts",
   "scripts": {
     "start": "tsx ./src/index.ts",
@@ -8,7 +8,7 @@
     "docker": "bash ./build.sh"
   },
   "dependencies": {
-    "@robertklep/qbittorrent": "^1.0.1",
+    "@ctrl/qbittorrent": "^9.6.0",
     "@types/node": "22.15.3",
     "dotenv": "^16.3.1"
   },
@@ -20,5 +20,6 @@
   "typeRoots": [
     "./node_modules/@types",
     "./src/types"
-  ]
+  ],
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
